fix: adjust z-index for shortcut element in Contact component

--- a/src/components/Contact/Element.module.css
+++ b/src/components/Contact/Element.module.css
@@ -43,7 +43,7 @@
   left: 0.5rem;
   border: 1px solid black;
   opacity: 1;
-  z-index: 2;
+  z-index: 0;
 }
 
 .elementTitle {
